21-Mar-2017 Fixes #226. Added Bam.Core.ISemanticVersion, and extension methods to compare an ISemanticVersion against a specified version (see ISemanticVersion.IsAtLeast). Changed Bam.Core.IProductDefinition to inherit ISemanticVersion since they shared properties - this may require package scripts to be fixed, if IProductDefinition was explicitly implemented. C.CompilerTool now implements ISemanticVersion, and Clang, Gcc, Mingw and VisualC compilers have been updated with major and minor versions. Changed Test8 which was causing a compiler warning starting with VisualC 2015.

21-Mar-2017 Fixes #311. Added read-only property, C.CCompilableModuleContainer.Compiler, so that source containers can query the compiler in use, rather than needing to drill down to individual object files.

19-Mar-2017 ======== Version 1.1.0 beta 2 Release ========

19-Mar-2017 Fixes #310. Added VisualC 2017 support. Test built in Windows 8.1. Note that VisualCCommon.Librarian has been split into VisualCCommon.LibrarianBase, Librarian32 and Librarian64.

19-Mar-2017 Fixes #309. Added Clang Xcode8 support. Test built in 10.11.6 (but not run as requires 10.12).

19-Mar-2017 Fixes #172. Added Gcc 5.4 support. Tested in Ubuntu 16.04.2 LTS. Fixed the Python command line option in the test scripts to select the version of Gcc.

15-Mar-2017 ======== Version 1.1.0 beta 1 Release ========

15-Mar-2017 Fixes #107. Removed deprecated 'removetrailingseperator' TokenizedString post-function.
